umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_oechem_17346045.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 47
bond_count: 50
sum_formula: C42FeO2P2
graph6: n?@A?GC?_CG??O?G?A??O??o??o?G??G?_?A???_??@???BG???G???????O???A????_???@????@?????_????G????@?_???D@????I?????_?????O?????C??????_C??????G???????????????????C??????A???????O??????@_
