umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_canon21.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 28
sum_formula: C21O8
graph6: "\\iQ?P?O?GG?A?@?A??GC???C??GA????C??@@???C???G???G????O???_????O????O?"
