umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_canon_cistrans1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 10
bond_count: 9
sum_formula: C10
graph6: IB?ccOC?G
